--- a/package.json
+++ b/package.json
@@ -1,21 +1,39 @@
 {
   "name": "testelectron",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
+  "main": "public/electron.js",
+  "homepage": "./",
   "dependencies": {
+    "@craco/craco": "^6.3.0",
+    "@mapbox/node-pre-gyp": "^1.0.8",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "docx-pdf": "^0.0.1",
+    "docx-templates": "^4.8.2",
+    "electron-is-dev": "^2.0.0",
+    "electron-pos-printer": "^1.2.4",
+    "electron-updater": "^4.6.1",
+    "mysql2": "^2.3.2",
+    "pdf-to-printer": "^5.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "uuid": "^8.3.2",
+    "web-vitals": "^1.0.1",
+    "yaqrcode": "^0.2.1",
+    "yarn": "^1.22.17"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
+    "buildfull": "craco build && electron-builder --publish=always",
+    "eject": "react-scripts eject",
+    "dev": "concurrently -k \"BROWSER=none npm start\" \"npm:electron\"",
+    "electron": "wait-on tcp:3000 && electron ."
   },
   "eslintConfig": {
     "extends": [
@@ -34,5 +52,17 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^9.8.8",
+    "concurrently": "^6.3.0",
+    "electron": "^15.2.0",
+    "electron-builder": "^21.2.0",
+    "electron-is-dev": "^2.0.0",
+    "grunt-node-gyp": "^5.0.0",
+    "postcss": "^7.0.39",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
+    "wait-on": "^6.0.0"
   }
+
 }
